Add kegg2bipartitegraph in tools.

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -10,6 +10,11 @@ permalink: pages/tools/
 			<h3>Package in development</h3>
 			<ul>
 				<li>
+					<p><a href='https://github.com/ArnaudBelcour/kegg2bipartitegraph'>kegg2bipartitegraph</a>.<br>
+						A tool to reconstruct metabolic bipartite graph using KEGG and different inputs (eggnog-mapper results, Kofam-Koala, KEGG organisms).<br>
+					</p>
+				</li>
+				<li>
 					<p><a href='https://github.com/AuReMe/esmecata'>esmecata</a>.<br>
 						EsMeCaTa: Estimating Metabolic Capabilties from Taxonomic annotations.<br>
 					</p>
