--- a/pages/publications.html
+++ b/pages/publications.html
@@ -22,6 +22,12 @@ permalink: pages/publications/
 	<h2>Article</h2>
 	<ul>
 		<li>
+			<p> Empirical evidence for metabolic drift in plant and algal lipid biosynthesis pathways . <br>
+				Maëlle Zonnequin, Arnaud Belcour, Ludovic Delage, Anne Siegel, Samuel Blanquart, Catherine Leblanc, Gabriel V. Markov. <br>
+				<a href='https://www.frontiersin.org/articles/10.3389/fpls.2024.1339132'>Frontiers in Plant Science</a> (2024).
+			</p>
+		</li>
+		<li>
 			<p> Inferring and comparing metabolism across heterogeneous sets of annotated genomes using AuCoMe. <br>
 				<b>Arnaud Belcour</b>, <b>Jeanne Got</b>, Méziane Aite, Ludovic Delage, Jonas Collén, Clémence Frioux, Catherine Leblanc, Simon M. Dittami, Samuel Blanquart, <b>Gabriel V. Markov</b> and <b>Anne Siegel</b>​. <br>
 				<a href='https://doi.org/10.1101/gr.277056.122'>Article at Genome Research</a> (2023).
@@ -29,7 +35,7 @@ permalink: pages/publications/
 		</li>
 		<li>
 			<p> Robustness analysis of metabolic predictions in algal microbial communities based on different annotation pipelines. <br>
-				Elham Karimi​, Enora Geslain, Arnaud Belcour, Clémence Frioux, Méziane Aïte, Anne Siegel, Erwan Corre and Simon M. Dittami​. <br>
+				Elham Karimi​, Enora Geslain, Arnaud Belcour, Clémence Frioux, Méziane Aïte, Anne Siegel, Erwan Corre and Simon M. Dittami. <br>
 				<a href='https://doi.org/10.7717/peerj.11344'>Article at PeerJ</a> (2021).
 			</p>
 		</li>
