Add new preprint.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -85,6 +85,12 @@ permalink: pages/publications/
 	<h2>Preprint</h2>
 	<ul>
 		<li>
+			<p> Evolutionary genomics of the emergence of brown algae as key components of coastal ecosystems. <br>
+				France Denoeud, Olivier Godfroy, Corinne Cruaud, Svenja Heesch, Zofia Nehr, Nachida Tadrent, Arnaud Couloux, Loraine Brillet-Gueguen, Ludovic Delage, Dean Dean, Taizo Motomura, Duncan Sussfeld, Xiao Fan, Lisa Mazeas, Nicolas Terrapon, Josue Barrera-Redondo, Romy Petroll, Lauric Reynes, Seok-Wan Choi, Jihoon Jo, Kavitha Uthanumallian, Kenny Bogaert, Celine Duc, Pelagie Ratchinski, Agnieszka Lipinska, Benjamin Noel, Eleanor A. Murphy, Martin Lohr, Ananya Khatei, Pauline Hamon-Giraud, Christophe Vieira, Svea Sanja Akerfors, Shingo Akita, Komlan Avia, Yacine Badis, Tristan Barbeyron, Arnaud Belcour, Wahiba Berrabah, Samuel Blanquart, Ahlem Bouguerba, Trevor T Bringloe, Rose Ann Cattolico, Alexandre Cormier, Maria Helena Cruz de Carvalho, Romain Dallet, Olivier De Clerck, Ahmed Debit, Erwan Denis, Christophe Destombe, Erica Dinatale, Simon M Dittami, Elodie Drula, Sylvain Faugeron, Jeanne Got, Louis Graf, Agnes Groisillier, Marie-Laure Guillemin, Lars Harms, William John Hatchett, Bernard Henrissat, Galice Hoarau, Chloe Jollivet, Alexander Jueterbock, Ehsan Kayal, Kazuhiro Kogame, Arthur Le Bars, Catherine Leblanc, Ronja Ley, Xi Liu, Pascal Jean Lopez, Philippe Lopez, Eric Manirakiza, Karine Massau, Stephane Mauger, Laetitia Mest, Gurvan Michel, Catia Monteiro, Chikako Nagasato, Delphine Negre, Eric Pelletier, Naomi Phillips, Philippe Potin, Stefan A. Rensing, Ellyn Rousselot, Sylvie Rousvoal, Declan Schroeder, Delphine Scornet, Anne Siegel, Leila Tirichine, Thierry Tonon, Klaus Valentin, Heroen Verbruggen, Florian Weinberger, Glen Wheeler, Hiroshi Kawai, Akira F. Peters, Hwan Su Yoon, Cecile Herve, Naihao Ye, Eric Bapteste, Myriam Valero, Gabriel V Markov, Erwan Corre, Susana M Coelho, Patrick Wincker, Jean-Marc Aury and J. Mark Cock. <br>
+				<a href='https://www.biorxiv.org/content/10.1101/2024.02.19.579948v1'>Article at bioRxiv</a> (2024)>.
+			</p>
+		</li>
+		<li>
 			<p> EsMeCaTa: Estimating metabolic capabilities from taxonomic affiliations. <br>
 				Arnaud Belcour, Baptiste Ruiz, Clémence Frioux, Samuel Blanquart and Anne Siegel. <br>
 				<a href='https://doi.org/10.1101/2022.03.16.484574'>Article at bioRxiv</a> (2022), <a href='https://github.com/AuReMe/esmecata'>code</a>.
