--- a/pages/publications.html
+++ b/pages/publications.html
@@ -87,7 +87,7 @@ permalink: pages/publications/
 		<li>
 			<p> SPARTA: Interpretable functional classification of microbiomes and detection of hidden cumulative effects. <br>
 				Baptiste Ruiz, Arnaud Belcour, Samuel Blanquart, Sylvie Buffet-Bataillon, Isabelle Le Huerou-Luron, Anne Siegel and Yann Le Cunff. <br>
-				<a href='https://doi.org/10.1101/2024.03.07.583888'>Article at bioRxiv</a> (2024)>.
+				<a href='https://doi.org/10.1101/2024.03.07.583888'>Article at bioRxiv</a> (2024).
 			</p>
 		</li>
 		<li>
